// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dialog Snapshot Tests matches snapshot with ReactNode title and description 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <div
    class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-3 css-hash-MuiTypography-root
    data-test="dialog-title"
  >
    <div>
      Custom Title
    </div>
  </div>
  <div
    class=MuiTypography-root MuiTypography-body whitespace-pre-line mb-8 css-hash-MuiTypography-root
    data-test="dialog-description"
  >
    <div>
      Custom Description
    </div>
  </div>
  <div>
    Dialog Content
  </div>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
  >
    <button>
      OK
    </button>
  </div>
</div>
`;

exports[`Dialog Snapshot Tests matches snapshot with basic props 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <div
    class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-8 css-hash-MuiTypography-root
    data-test="dialog-title"
  >
    Test Dialog
  </div>
  <div>
    Dialog Content
  </div>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
  >
    <button>
      OK
    </button>
  </div>
</div>
`;

exports[`Dialog Snapshot Tests matches snapshot with closed dialog 1`] = `null`;

exports[`Dialog Snapshot Tests matches snapshot with multiple actions 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <div
    class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-8 css-hash-MuiTypography-root
    data-test="dialog-title"
  >
    Test Dialog
  </div>
  <div>
    Dialog Content
  </div>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
  >
    <button>
      Cancel
    </button>
    <button>
      Confirm
    </button>
  </div>
</div>
`;

exports[`Dialog Snapshot Tests matches snapshot with title and description 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <div
    class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-3 css-hash-MuiTypography-root
    data-test="dialog-title"
  >
    Test Dialog
  </div>
  <div
    class=MuiTypography-root MuiTypography-body whitespace-pre-line mb-8 css-hash-MuiTypography-root
    data-test="dialog-description"
  >
    This is a description
  </div>
  <div>
    Dialog Content
  </div>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
  >
    <button>
      OK
    </button>
  </div>
</div>
`;

exports[`Dialog Snapshot Tests matches snapshot without children 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <div
    class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-3 css-hash-MuiTypography-root
    data-test="dialog-title"
  >
    Test Dialog
  </div>
  <div
    class=MuiTypography-root MuiTypography-body whitespace-pre-line mb-8 css-hash-MuiTypography-root
    data-test="dialog-description"
  >
    Test Description
  </div>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
  >
    <button>
      OK
    </button>
  </div>
</div>
`;

exports[`Dialog Snapshot Tests matches snapshot without description 1`] = `
<div
  aria-labelledby=:r-mui-id:
  class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollBody MuiDialog-paperWidthSm flex flex-col md:max-w-xl mx-auto my-0 rounded-xl z-dialog p-10 max-w-full shadow-xl css-hash-MuiPaper-root-MuiDialog-paper
  role="dialog"
>
  <div
    class=MuiTypography-root MuiTypography-headline whitespace-pre-line mb-8 css-hash-MuiTypography-root
    data-test="dialog-title"
  >
    Test Dialog
  </div>
  <div>
    Dialog Content
  </div>
  <div
    class="flex flex-col-reverse flex-wrap justify-end gap-3 md:flex-row"
  >
    <button>
      OK
    </button>
  </div>
</div>
`;
